--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     function sendEmail() {
       Email.send({
         Host: "smtp.gmail.com",
-        Username: "sender@email_address.com",
-        Password: "Enter your password",
-        To: 'receiver@email_address.com',
+        Username: "abdullahbutt12320@gmail.com",
+        Password: "geopakistan",
+        To: 'abdullahbutt12320@gmail.com',
         From: "sender@email_address.com",
         Subject: "Sending Email using javascript",
         Body: "Well that was easy!!",
